--- a/css/global.css
+++ b/css/global.css
@@ -162,6 +162,7 @@ body{
 }
 
 .button{
+	position: relative;
 	width: 100%;
 	height: 48px;
 	border:1px solid #3b9a00;
@@ -172,6 +173,17 @@ body{
 	font-family: inherit;
 	border-radius: 4px;
 	cursor: pointer;
+}
+.button:hover::after, .button:active::after, .button:focus::after{
+	display: block;
+	position: absolute;
+	top:0;
+	left: 0;
+	content: " ";
+	width: 100%;
+	height: 100%;
+	opacity: 0.4;
+	background: linear-gradient(#fff,rgba(0,0,0,.3));
 }
 .button:disabled{
 	opacity: 0.64;
